<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uclv_robotiq_ros</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michele.mirto@unicampania.it">Michele Mirto</maintainer>
  <author email="michele.mirto@unicampania.it">Michele Mirto</author>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>uclv_robotiq_interfaces</depend>
  <depend>uclv_robotiq</depend>
  <depend>uclv_modbus</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
